Move extern function declarations to separate header.

--- a/src/Visual Studio/static/arpack-ng/arpack-ng.vcxproj
+++ b/src/Visual Studio/static/arpack-ng/arpack-ng.vcxproj
@@ -211,6 +211,13 @@
     <ClCompile Include="..\..\..\ARPACK\arpack-ng\UTIL\zmout.c" />
     <ClCompile Include="..\..\..\ARPACK\arpack-ng\UTIL\zvout.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\arpack.h" />
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\arpack_internal.h" />
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\common_blocks.h" />
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\constants.h" />
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\lapack.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
