--- a/src/Visual Studio/static/arpack-ng/arpack-ng.vcxproj.filters
+++ b/src/Visual Studio/static/arpack-ng/arpack-ng.vcxproj.filters
@@ -262,4 +262,21 @@
       <Filter>Source Files\SRC</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\arpack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\common_blocks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\arpack_internal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\ARPACK\arpack-ng\lapack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
