--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Exclude external source directories.
+**/src/ARPACK/arpackpp/
+
 # User-specific files
 *.rsuser
 *.suo
