--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Exclude external source directories.
-**/src/ARPACK/arpackpp/
+**/arpackpp/
+
+# Exclude CMake build directory
+/build/
 
 # User-specific files
 *.rsuser
