--- a/src/arpack-ng/CMakeLists.txt
+++ b/src/arpack-ng/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-target_include_directories(arpack-ng
+target_include_directories(arpack
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
@@ -12,7 +12,7 @@ if(ENABLE_ICB)
   add_subdirectory(ICB)
 endif()
 
-target_sources(arpack-ng PRIVATE f2c.c)
+target_sources(arpack PRIVATE f2c.c)
 
 if(ENABLE_TESTS)
   add_subdirectory(EXAMPLES)
