--- a/src/arpack-ng/ICB/CMakeLists.txt
+++ b/src/arpack-ng/ICB/CMakeLists.txt
@@ -1,10 +1,10 @@
-target_include_directories(arpack-ng
+target_include_directories(arpack
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
-target_sources(arpack-ng
+target_sources(arpack
   PRIVATE
     arpack_icb.c
     debug.c
